<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Brew Droid</string>

    <string name="attenuation_calculator">Attenuation Calculator</string>
    <string name="hydrometer_calculator">Hydrometer Calculator</string>
    <string name="grain_list">Grain List</string>

				<!-- general -->
				<string name="og">O.G.:"</string>
				<string name="fg">F.G.:"</string>
				<string name="brix">Brix:"</string>
				<string name="newLabel">New</string>
				<string name="create">Create</string>
				<string name="delete">Delete</string>
				<string name="edit">Edit</string>
				<string name="removed">Removed %1$s</string>
				<string name="style">Style</string>
				<string name="grain">Grain</string>
				<string name="hops">Hops</string>
				<string name="recipes">Recipes</string>

				<!-- Attenuation Calculator Strings -->
				<string name="attenuation_calculator_abvw_label">Alcohol by Volume/Weight:</string>
				<string name="attenuation_calculator_attenuation_label">Attenuation Apparent/Real:</string>
				<string name="attenuation_calculator_extract_label">Residual Extract SG/Plato:</string>

				<!-- Hydrometer Calculator Strings -->
				<string name="hydrometer_calculator_description">Hydrometers should be calibrated to 60 Degrees F, or about 15.5 Degrees C. Use this utility to correct a reading at another temperature.</string>
				<string name="hydrometer_calculator_sg_reading_label">Reading (SG/Plato):</string>
				<string name="hydrometer_calculator_temp_reading_label">Temperature (F/C):</string>
				<string name="hydrometer_calculator_corrected_label">Corrected SG (/Plato):</string>

				<!-- Edit Grain -->
				<string name="edit_grain">Edit Grain</string>
				<string name="edit_grain_name">Grain Name:</string>
				<string name="edit_grain_origin">Country of Origin:</string>
				<string name="edit_grain_srm">Color Potential (SRM):</string>
				<string name="edit_grain_potential">Potential:</string>
				<string name="edit_grain_list_menu_title">Modify Grain</string>

</resources>
