<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
	
	<!-- og -->
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_marginTop="5dip"
		android:layout_gravity="center_vertical"
		android:text="@string/hydrometer_calculator_description"/>
		
	<TextView
		android:id="@+id/sg_reading_label"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_marginTop="57dip"
		android:layout_marginLeft="6dip"
		android:text="@string/hydrometer_calculator_sg_reading_label"/>
	<EditText
		android:id="@+id/sg_reading"
		android:singleLine="true"
		android:inputType="numberDecimal"
		android:layout_height="wrap_content"
		android:layout_marginTop="82dip"
		android:layout_marginLeft="42dip"
		android:layout_width="75dip"
		android:text="1.050"/>
	<EditText
		android:id="@+id/brix_reading"
		android:singleLine="true"
		android:inputType="numberDecimal"
		android:layout_height="wrap_content"
		android:layout_alignTop="@+id/sg_reading"
		android:layout_marginLeft="127dip"
		android:layout_width="75dip"
		android:text="12.39"/>
		
	<TextView
		android:id="@+id/temp_reading_label"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_marginTop="137dip"
		android:layout_alignLeft="@+id/sg_reading_label"
		android:text="@string/hydrometer_calculator_temp_reading_label"/>
	<EditText
		android:id="@+id/temp_reading_f"
		android:singleLine="true"
		android:inputType="numberDecimal"
		android:layout_height="wrap_content"
		android:layout_marginTop="162dip"
		android:layout_alignLeft="@+id/sg_reading"
		android:layout_width="75dip"
		android:text="60.0"/>
	<EditText
		android:id="@+id/temp_reading_c"
		android:singleLine="true"
		android:inputType="numberDecimal"
		android:layout_height="wrap_content"
		android:layout_alignTop="@+id/temp_reading_f"
		android:layout_alignLeft="@+id/brix_reading"
		android:layout_width="75dip"
		android:text="15.5"/>
		
	<TextView
		android:id="@+id/corrected_label"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_marginTop="217dip"
		android:layout_alignLeft="@+id/sg_reading_label"
		android:text="@string/hydrometer_calculator_corrected_label"/>
	<EditText
		android:id="@+id/corrected_sg"
		android:enabled="false"
		android:singleLine="true"
		android:inputType="numberDecimal"
		android:layout_height="wrap_content"
		android:layout_marginTop="242dip"
		android:layout_alignLeft="@+id/sg_reading"
		android:layout_width="75dip"
		android:text="1.05"/>
	<EditText
		android:id="@+id/corrected_brix"
		android:enabled="false"
		android:singleLine="true"
		android:inputType="numberDecimal"
		android:layout_height="wrap_content"
		android:layout_alignTop="@+id/corrected_sg"
		android:layout_alignLeft="@+id/brix_reading"
		android:layout_width="75dip"
		android:text="12.39"/>

</RelativeLayout>
